fixed margins for flex on firefox

--- a/css/style.scss
+++ b/css/style.scss
@@ -167,7 +167,7 @@ hr {border-color: $border-color;}
 	flex: 1 1 175px;
 	-webkit-flex: 1 1 175px;
 	height: 0;
-	margin: 0 1%;
+	margin: 0 0.5em;
 }
 
 @media screen and (max-width: 700px) {
